--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
     <string name="app_name">QuizDemo</string>
-    <string name="question_text">Canberra is the capital of Australia</string>
+    <string name="question_australia">Canberra is the capital of Australia</string>
+    <string name="question_oceans">Ocean</string>
+    <string name="question_mideast">MidEast</string>
+    <string name="question_africa">Africa</string>
+    <string name="question_americas">Americas</string>
+    <string name="question_asia">Asia</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
    <string name="correct_toast">Correct!!</string>
     <string name="incorrect_toast">InCorrect!!</string>
+    <string name="next_button">Next</string>
+    <string name="prev_button">Prev</string>
 </resources>
