--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,13 @@
     <string name="question_asia">Asia</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
-   <string name="correct_toast">Correct!!</string>
+    <string name="correct_toast">Correct!!</string>
     <string name="incorrect_toast">InCorrect!!</string>
     <string name="next_button">Next</string>
     <string name="prev_button">Prev</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgement_toast">Cheating is wrong!</string>
+
 </resources>
